execution_full_out/chicken_tender/012.txt
An error happened during execution:
  File "/tmp/tmph8jzujd0.py", line 35
    lambda t: (t, 0) for t in [0, W],
                                    ^
SyntaxError: invalid syntax
